# system-storage/src/main/kotlin/com/ertools/dto/entity/Credentials.kt
@@ -1,0 +1,8 @@
+package com.ertools.dto.entity
+
+import com.ertools.commons.Utils
+
+data class Credentials(
+    val username: String,
+    val password: String
+)
